# preprocessy

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.rst  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: workflow.yml
datasets/configs/: config2.json  config3.json  config4.json  dataset.csv  params.json  pipeline_config.json
datasets/encoding/: test.csv  test2.csv  testnew.csv
docs/: api.rst  conf.py  contributing.rst  index.rst  license.rst  parameters.rst  research.rst
evaluations/: evaluate_classification.ipynb  evaluate_correlation.ipynb  evaluate_nullvalues.ipynb  evaluate_pipeline.ipynb  evaluate_regression.ipynb  evaluate_scaling.ipynb  evaluate_selectkbest.ipynb  evaluate_split.ipynb  evaluate_split.py  new_evaluate_scaling_1.ipynb
evaluations/results/: evaluate_split.txt
preprocessy/: __init__.py
preprocessy/data_splitting/: _split.py
preprocessy/encoding/: __init__.py  _categorical.py  test.csv  test.py
preprocessy/feature_selection/: __init__.py  _correlation.py  _selectKBest.py
preprocessy/handlecategorical/: handlecategorical.py  test.csv  test.py  testnew.csv
preprocessy/handlenullvalues/: __init__.py  _main.py  errors.py
preprocessy/input/: __init__.py  _read.py
preprocessy/missing_data/: __init__.py  _main.py
preprocessy/outliers/: __init__.py  _handleoutlier.py  handleoutlier.py  test.py
preprocessy/parse/: __init__.py  _summarize.py
preprocessy/pipelines/: __init__.py  _base.py  _config.py  _feature_selection_pipeline.py  _pipeline.py  _standard_pipeline.py  config.py
preprocessy/readdata/: read.py  readdata.py  test.py
preprocessy/resampling/: __init__.py  _kfold.py  _split.py
preprocessy/scaling/: __init__.py  _main.py  test.csv  test2.csv
preprocessy/scaling/math_funcs/: math_func.py  scaling_techniques.txt
preprocessy/utils/: __init__.py  main.py
tests/: test_base.py  test_config.py  test_correlation.py  test_encode.py  test_input.py  test_kfold.py  test_null.py  test_outlier.py  test_parse.py  test_sample.py  test_scaling.py  test_selectkbest.py  test_split.py
