[tool.poetry]
name = "preprocessy"
version = "1.0.2"
description = "Data Preprocessing library that provides customizable pipelines."
authors = ["Saif Kazi <saif1204kazi@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://preprocessy.readthedocs.io/en/latest/"
repository = "https://github.com/preprocessy/preprocessy"
documentation = "https://preprocessy.readthedocs.io/en/latest/api/"
keywords = ["Data Pipelines", "Data Preprocessing", "Data Science"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/preprocessy/preprocessy/issues"

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "2.1.0"
colorama = "0.4.4"
pandas = "1.3.4"
prettytable = "2.1.0"
scikit-learn = "0.24.2"
stringcase = "1.2.0"

[tool.poetry.dev-dependencies]
black = "21.7b0"
coverage = "5.5"
flake8 = "3.9.2"
pre-commit = "2.13.0"
pytest = "6.2.4"
Sphinx = "4.1.1"
sphinx-issues = "1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | __pycache__
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
